workloads/gateway/frps.deploy.yaml
---

apiVersion: apps/v1
kind: Deployment

metadata:
  name: frps
  namespace: gateway
  annotations:
    flux.weave.works/automated: "true"
    flux.weave.works/tag.frp: semver:~0.26

spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: frps
  template:
    metadata:
      labels:
        app.kubernetes.io/name: frps
    spec:
      containers:
        - name: frp
          image: stevenxie/frp:0.26.0
          ports:
            - name: bind
              containerPort: 7000
            - name: dashboard
              containerPort: 7500
            - name: https
              containerPort: 8443
            - name: ssh
              containerPort: 8022
            - name: ingress
              containerPort: 8000
          volumeMounts:
            - name: config
              mountPath: /etc/frp
          readinessProbe: &probe
            tcpSocket:
              port: bind
          livenessProbe: *probe
          resources:
            requests:
              cpu: 1m
              memory: 10Mi
            limits:
              cpu: 75m
              memory: 75Mi
      volumes:
        - name: config
          configMap:
            name: frps
