workloads/gateway/ambassador-tls.svc.yaml
apiVersion: v1
kind: Service

metadata:
  name: ambassador-tls
  namespace: gateway
  labels:
    app.kubernetes.io/name: ambassador
  annotations:
    getambassador.io/config: |
      apiVersion: ambassador/v1
      kind: Module
      name: tls
      config:
        server:
          enabled: true
          redirect_cleartext_from: 8080
          secret: stevenxie-me-tls # fallback
      ---
      apiVersion: ambassador/v1
      kind: TLSContext
      name: stevenxie-me
      hosts:
        - stevenxie.me
        - "*.stevenxie.me"
      secret: stevenxie-me-tls
      ---
      apiVersion: ambassador/v1
      kind: TLSContext
      name: stevenxie-com
      hosts:
        - stevenxie.com
        - "*.stevenxie.com"
      secret: stevenxie-com-tls
      ---
      apiVersion: ambassador/v1
      kind: TLSContext
      name: wanderfallgames-com
      hosts:
        - wanderfallgames.com
        - www.wanderfallgames.com
      secret: wanderfallgames-com-tls

spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
    - name: https
      port: 443
      protocol: TCP
      targetPort: https
  selector:
    app.kubernetes.io/name: ambassador
