workloads/gateway/frps.svc.yaml
---

apiVersion: v1
kind: Service

metadata:
  name: frps
  namespace: gateway
  labels:
    app.kubernetes.io/name: frps

spec:
  selector:
    app.kubernetes.io/name: frps
  ports:
    - name: bind
      port: 7000
      targetPort: bind
    - name: dashboard
      port: 7500
      targetPort: dashboard
    - name: https
      port: 443
      targetPort: https
    - name: ssh
      port: 22
      targetPort: ssh
    - name: ingress
      port: 80
      targetPort: 8000

---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService

metadata:
  name: frps
  namespace: gateway

spec:
  gateways: ["proxy"]
  hosts: ["frps.stevenxie.me"]
  tcp:
    - match:
        - port: 30070
      route:
        - destination:
            host: frps
            port:
              number: 7000
